// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput when adding or updating text does not render an invalid digit 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when adding or updating text renders a valid digit 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when changing focus renders with gray border when blurred 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when changing focus renders with green border when focused 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#14d64d",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when key is pressed does not render an invalid digit 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when key is pressed renders a valid digit 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when key is pressed renders an empty value 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when manually updating focus renders with green border when blurred 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when manually updating focus renders with green border when focused 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when running on different platforms displays default keyboard type on Android 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="number-pad"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`NumberInput when running on different platforms displays number-pad keyboard type on iOS 1`] = `
<TextInput
  allowFontScaling={true}
  blurOnSubmit={false}
  caretHidden={true}
  keyboardType="default"
  maxLength={1}
  onBlur={[Function]}
  onChangeText={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  rejectResponderTermination={true}
  selectionColor="#00000000"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 2,
        "fontSize": 20,
        "height": 63,
        "marginHorizontal": 4,
        "textAlign": "center",
        "width": 45,
      },
      Object {
        "borderColor": "#c4ccd6",
      },
    ]
  }
  underlineColorAndroid="transparent"
/>
`;
